--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ bidict==0.21.2
 blinker==1.4
 cffi==1.14.5
 click==8.0.1
+colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.2
 Flask==2.0.1
@@ -17,6 +18,7 @@ idna==3.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+Pillow==8.2.0
 pycparser==2.20
 python-engineio==4.2.0
 python-socketio==5.3.0
